# qfusion

./: README.md  cl_main.c  library.c
freedesktop/: net.warsow.Warsow.desktop  net.warsow.Warsow.metainfo.xml
source/: CMakeLists.txt
source/cgame/: cg_ents.cpp  cg_local.h  cg_main.cpp  cg_public.h  cg_view.cpp  delayedexecutionsystem.cpp  delayedexecutionsystem.h  effectssystemfacade.cpp  effectssystemfacade.h  mediacache.cpp  mediacache.h  simulatedhullssystem.cpp  simulatedhullssystem.h  trackedeffectssystem.cpp  trackedeffectssystem.h
source/client/: CMakeLists.txt  animatedvalues.h  cl_main.cpp  client.h  console.c  console.cpp  console.h  ftlib.cpp  ftlib.h  ftlib_draw.cpp  ftlib_local.h  imageloading.cpp  keys.cpp  keys.h  profilerhud.cpp  serverinfoparser.cpp  serverinfoparser.h  serverlist.cpp  serverlist.h  snd_public.h  vid.h  videosystem.cpp  videosystem.h
source/client/cgame/: cg_boneposes.cpp  cg_input.cpp  cg_local.h  cg_main.cpp  cg_players.cpp  cg_pmodels.cpp  cg_public.h  cg_teams.cpp  cg_view.cpp  cg_wmodels.cpp  delayedexecutionsystem.cpp  delayedexecutionsystem.h  effectssystemfacade.cpp  effectssystemfacade.h  mediacache.cpp  mediacache.h  particlesystem.cpp  particlesystem.h  polyeffectssystem.cpp  polyeffectssystem.h  simulatedhullssystem.cpp  simulatedhullssystem.h  trackedeffectssystem.cpp  trackedeffectssystem.h  (+2 more)
source/cmake/: QfusionUtils.cmake
source/common/: CMakeLists.txt  cm_q3bsp.cpp  cm_trace.cpp  common.cpp  common.h  cvar.cpp  lifecycle.cpp  local.h  net.cpp  noise.h  outputmessages.cpp  q_math.h  q_shared.h  syslocal.h  taskhandle.h  tasksystem.cpp  tasksystem.h  version.warsow.h  wswalgorithm.h  wswfunction.h  wswprofiler.cpp  wswprofiler.h
source/common/facilities/: asyncstream.cpp  bsp.cpp  cm_local.h  cm_main.cpp  cm_q3bsp.cpp  cm_sample.cpp  cm_trace.cpp  cm_trace.h  cm_trace_avx.cpp  cm_trace_sse42.cpp  cmdargs.h  cmdargssplitter.cpp  cmdargssplitter.h  cmdcompat.h  cmdsystem.cpp  cmdsystem.h  cmodel.h  commandshandler.h  configstringstorage.cpp  configstringstorage.h  configvars.cpp  configvars.h  cvar.cpp  cvar.h  demometadata.h  files.cpp  fscompat.h  gs_gameteams.cpp  gs_items.cpp  gs_misc.cpp  gs_pmove.cpp  gs_public.h  gs_slidebox.cpp  gs_weapondefs.cpp  gs_weapons.cpp  maplist.cpp  maplist.h  messagestreams.cpp  messagestreams.h  msg.cpp  (+28 more)
source/common/helpers/: actiontape.cpp  actiontape.h  algorithm.h  compression.cpp  enumtokenmatcher.h  exceptions.cpp  freelistallocator.h  hash.cpp  hash.h  library.cpp  library.h  mmuuid.cpp  mmuuid.h  parsecompat.cpp  parsecompat.h  patch.cpp  q_arch.h  q_libc.cpp  q_libc.h  q_math.cpp  q_math.h  qthreads.h  scopeexitaction.h  sortbyfield.cpp  stringsplitter.h  textstreamwriter.cpp  textstreamwriter.h  threads.cpp  tonum.h  userinfo.cpp  userinfo.h  wswbasicmath.h
source/common/linux/: linux_sys.cpp  sys.cpp
source/common/platform/linux/: linux_sys.cpp
source/common/platform/unix/: unix_sys.cpp
source/common/platform/win32/: sys.cpp  win_console.cpp  win_lib.cpp  win_sys.cpp  win_threads.cpp
source/common/types/: function.h  mapofboxednamedentries.h  podbuffer.h  podbufferholder.h  podvector.cpp  q_trie.cpp  scopedresource.h  smallassocarray.h  staticdeque.h  staticstring.h  staticvector.h  stringspanstorage.h  stringview.cpp  stringview.h
source/common/unix/: unix_console.cpp  unix_fs.cpp  unix_net.cpp  unix_sys.cpp  unix_threads.cpp
source/common/win32/: sys.cpp  win_console.cpp  win_fs.cpp  win_lib.cpp  win_net.cpp  win_sys.cpp  win_threads.cpp
source/game/: commandshandler.h  g_cmds.cpp
source/gameshared/: q_arch.h  q_shared.c  q_shared.h
source/ref/: backend.cpp  backendlocal.h  backendprogram.cpp  frontend.cpp  frontend.h  frontendavx.cpp  frontendcull.cpp  frontendcull.inc  frontenddraw.cpp  frontendsort.cpp  frontendsse2.cpp  frontendsse41.cpp  frontendsubmit.cpp  local.h  materiallexer.cpp  materiallocal.h  materialparser.cpp  q3bsp.cpp  ref.cpp  ref.h  vbo.cpp
source/ref_gl/: CMakeLists.txt  qgl.h  r_glimp.h
source/sdl/: sdl_client.cpp  sdl_clipboard.cpp  sdl_glw.cpp  sdl_lib.cpp  sdl_sys.cpp  sdl_threads.cpp  sdl_time.cpp  sdl_vid.cpp
source/server/: CMakeLists.txt  server.h  sv_main.cpp  sv_web.cpp
source/snd_openal/: CMakeLists.txt  qal.c  snd_env_sampler.cpp  snd_main.cpp  snd_propagation_table.cpp  snd_sources.cpp
source/ui/: ActionRequestArea.qml  AddNewListItemButton.qml  AutoFittingComboBox.qml  BindableCommand.qml  CVarAwareColorPicker.qml  CVarAwareModelSelector.qml  CVarAwareSliderWithBox.qml  CommandsPane.qml  ConfirmationItem.qml  ConnectionScreen.qml  DemoPlaybackMenu.qml  DemosListDelegate.qml  DemosPage.qml  Hud.qml  HudEditorWizard.qml  HudFragsFeed.qml  HudSettings.qml  HudTeamInfo.qml  InGameCallvoteMapSelector.qml  InGameCallvotesPage.qml  InGameGametypeOptionsPage.qml  InGameMenu.qml  KeyboardSettings.qml  LocalGameListDelegate.qml  LocalGamePage.qml  Logo.qml  MainMenu.qml  MainMenuButtonRow.qml  MainMenuPrimaryMenu.qml  MouseSettings.qml  NativelyDrawnImage.qml  NativelyDrawnModel.qml  PlayOnlinePage.qml  RichChatList.qml  ScoreboardSpecsPane.qml  ScoreboardStatsPane.qml  ScoreboardTable.qml  ScoreboardTeamPane.qml  SelectableLabel.qml  ServerBrowserCard.qml  (+18 more)
source/unix/: unix_console.c  unix_fs.cpp  unix_lib.cpp  unix_net.cpp  unix_sys.cpp  unix_threads.cpp  unix_time.cpp
source/win32/: conproc.cpp  win_client.cpp  win_clipboard.cpp  win_console.cpp  win_fs.cpp  win_glw.cpp  win_lib.cpp  win_net.cpp  win_qgl.cpp  win_sys.cpp  win_threads.cpp  win_time.cpp
(+441 files in other folders)
